# my-rust-blockchain

./: Cargo.toml  README.md
migrations/: 20260131123251_init.down.sql  20260131123251_init.up.sql  20260131165254_transactions.up.sql  20260131175502_wallet.down.sql  20260131175502_wallet.up.sql  20260201130010_block_id.down.sql  20260201130010_block_id.up.sql
src/: blockchain.rs  lib.rs  main.rs  transactions.rs  utils.rs
