[package]
name = "my-rust-blockchain"
version = "0.1.0"
edition = "2024"
default-run = "my-rust-blockchain"

[dependencies]
chrono = "0.4.43"
sha2 = "0.10.9"
rocket = {version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.7.0"
tokio = "1.49.0"
dotenvy = "0.15.7"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]